# LAPKT-private

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pip_requirements.txt
.github/workflows/: build_test.yml  codeql-analysis.yml  pypi_publish.yml  test_pypi_package.yml  test_testpypi_package.yml  (+1 more)
apptainer_configurations/: Apptainer.ApxNovelty  Apptainer.ApxNoveltyTarski
cmake/: Config.cmake.in  PostInstallScript.cmake
ctest/: CMakeLists.txt
developersguide/: build.md  cmake.md  discourse.md  pypi.md
src/: CMakeLists.txt
src/core/engine/: CMakeLists.txt
src/core/model/: CMakeLists.txt
src/core/node_eval/novelty/: CMakeLists.txt
src/core/planner/: CMakeLists.txt  planner.hxx  planner_py_module.cxx
src/core/planner/anytime_lapkt/: CMakeLists.txt  anytime_lapkt.cxx  anytime_lapkt.hxx
src/core/planner/approximate_novelty_search/: CMakeLists.txt
src/core/planner/approximate_novelty_search/approximate_bfws/: CMakeLists.txt  approximate_bfws.cxx  approximate_bfws.hxx
src/core/planner/approximate_novelty_search/approximate_dfs_plus/: CMakeLists.txt  approximate_dfs_plus.cxx  approximate_dfs_plus.hxx
src/core/planner/approximate_novelty_search/approximate_iw/: CMakeLists.txt  approximate_iw.cxx  approximate_iw.hxx
src/core/planner/approximate_novelty_search/approximate_iw_plus/: CMakeLists.txt  approximate_rp_iw.cxx  approximate_rp_iw.hxx
src/core/planner/approximate_novelty_search/approximate_siw/: CMakeLists.txt  approximate_siw.cxx  approximate_siw.hxx
src/core/planner/at_bfs_f/: CMakeLists.txt  at_bfsf_planner.cxx  at_bfsf_planner.hxx  ipc2014_rwa.hxx
src/core/planner/bfs_f/: CMakeLists.txt  bfsf_planner.cxx  bfsf_planner.hxx
src/core/planner/bfws/: CMakeLists.txt  bfws.cxx  bfws.hxx
src/core/planner/brfs/: CMakeLists.txt  brfs_planner.cxx  brfs_planner.hxx
src/core/planner/delete-free-iw/: CMakeLists.txt  dfiw_planner.cxx  dfiw_planner.hxx
src/core/planner/delete-free-siw/: CMakeLists.txt  dfsiw_planner.cxx  dfsiw_planner.hxx
src/core/planner/dfs_plus/: CMakeLists.txt  dfs_plus_planner.cxx  dfs_plus_planner.hxx
src/core/planner/iw/: CMakeLists.txt  iw_planner.cxx  iw_planner.hxx
src/core/planner/iw_plus/: CMakeLists.txt  rp_iw_planner.cxx  rp_iw_planner.hxx
src/core/planner/siw/: CMakeLists.txt  siw_planner.cxx  siw_planner.hxx
src/core/planner/siw_plus/: CMakeLists.txt  siw_plus_planner.cxx  siw_plus_planner.hxx
src/core/planner/siw_plus-then-bfs_f/: CMakeLists.txt  siw_plus_bfs_f.cxx  siw_plus_bfs_f.hxx
src/extensions/planner/: CMakeLists.txt  planner_py_module.cxx
src/lapkt/: CMakeLists.txt
src/lapkt/engine/: CMakeLists.txt  approx_novelty_bfws_2h.hxx  approx_novelty_bfws_2h_M.hxx  approx_novelty_bfws_2h_consistency.hxx  approx_novelty_bfws_2h_consistency_M.hxx  approx_novelty_bfws_4h.hxx  approx_novelty_dfs_plus.hxx  approx_novelty_iw.hxx  approx_novelty_rp_iw.hxx  approx_novelty_serialized_search.hxx  approx_novelty_siw.hxx  approx_novelty_siw_plus.hxx  at_bfs.hxx  at_bfs_dq_mh.hxx  at_gbfs_3h.hxx  at_rwbfs_dq_mh.hxx  bfws_2h.hxx  bfws_2h_M.hxx  bfws_2h_consistency.hxx  bfws_2h_consistency_M.hxx  bfws_4h.hxx  brfs.hxx  dfs_plus.hxx  ff_ehc.hxx  ff_gbfs.hxx  ipc2014_rwa.hxx  iw.hxx  open_list.hxx  reachability.cxx  reachability.hxx  rp_iw.hxx  serialized_search.hxx  siw.hxx  siw_plus.hxx
src/lapkt/engine/node_eval/heuristic/: CMakeLists.txt  bs_graph.hxx  ff_rp_heuristic.hxx  h_1.hxx  h_2.hxx  h_C.hxx  h_null.hxx  h_unsat.hxx  h_unsat_mutex.hxx  heuristic.hxx  landmark_count.hxx  landmark_graph.cxx  landmark_graph.hxx  landmark_graph_generator.hxx  landmark_graph_manager.hxx  layered_h_max.hxx  rp_heuristic.hxx
src/lapkt/engine/node_eval/novelty/: CMakeLists.txt  approximate_novelty.hxx  approximate_novelty_partition_1.hxx  approximate_novelty_partition_2.hxx  node_novelty_spaces.hxx  novelty.hxx  novelty_partition.hxx  novelty_partition_1.hxx  novelty_partition_2.hxx
src/lapkt/model/: CMakeLists.txt  action.cxx  action.hxx  cond_eff.cxx  cond_eff.hxx  conj_comp_prob.cxx  conj_comp_prob.hxx  fl_conj.cxx  fl_conj.hxx  fluent.cxx  fluent.hxx  fwd_search_prob.cxx  fwd_search_prob.hxx  match_tree.cxx  match_tree.hxx  mutex_set.cxx  mutex_set.hxx  strips_prob.cxx  strips_prob.hxx  strips_state.cxx  strips_state.hxx  succ_gen.cxx  succ_gen.hxx  watched_lit_succ_gen.cxx  watched_lit_succ_gen.hxx
src/lapkt/planner/: CMakeLists.txt  planner.hxx
src/lapkt/planner/anytime_lapkt/: CMakeLists.txt  anytime_lapkt.cxx  anytime_lapkt.hxx
src/lapkt/planner/apx_bfws/: CMakeLists.txt  approximate_bfws.cxx  approximate_bfws.hxx
src/lapkt/planner/apx_dfs_plus/: CMakeLists.txt  approximate_dfs_plus.cxx  approximate_dfs_plus.hxx
src/lapkt/planner/apx_iw/: CMakeLists.txt  approximate_iw.cxx  approximate_iw.hxx
src/lapkt/planner/apx_iw_plus/: CMakeLists.txt  approximate_rp_iw.cxx  approximate_rp_iw.hxx
src/lapkt/planner/apx_siw/: CMakeLists.txt  approximate_siw.cxx  approximate_siw.hxx
src/lapkt/planner/at_bfs_f/: CMakeLists.txt  at_bfsf_planner.cxx  at_bfsf_planner.hxx
src/lapkt/planner/bfs_f/: CMakeLists.txt  bfsf_planner.cxx  bfsf_planner.hxx
src/lapkt/planner/bfws/: CMakeLists.txt  bfws.cxx  bfws.hxx
src/lapkt/planner/brfs/: CMakeLists.txt  brfs_planner.cxx  brfs_planner.hxx
src/lapkt/planner/delete-free-iw/: CMakeLists.txt  dfiw_planner.cxx  dfiw_planner.hxx
src/lapkt/planner/delete-free-siw/: CMakeLists.txt  dfsiw_planner.cxx  dfsiw_planner.hxx
src/lapkt/planner/dfs_plus/: CMakeLists.txt  dfs_plus_planner.cxx  dfs_plus_planner.hxx
src/lapkt/planner/iw/: CMakeLists.txt  iw_planner.cxx  iw_planner.hxx
src/lapkt/planner/iw_plus/: CMakeLists.txt  rp_iw_planner.cxx  rp_iw_planner.hxx
src/lapkt/planner/siw/: CMakeLists.txt  siw_planner.cxx  siw_planner.hxx
src/lapkt/planner/siw_plus/: CMakeLists.txt  siw_plus_planner.cxx  siw_plus_planner.hxx
src/lapkt/planner/siw_plus-then-bfs_f/: CMakeLists.txt  siw_plus_bfs_f.cxx  siw_plus_bfs_f.hxx
src/lapkt/utils/: CMakeLists.txt  bit_array.cxx  bit_matrix.hxx  bit_set.cxx  bit_set.hxx  hash_table.hxx  memory.cxx  resources_control.cxx  types.hxx
(+37 files in other folders)
