target_sources(core
    PRIVATE
        bs_graph.hxx
        ff_rp_heuristic.hxx
        h_1.hxx
        h_2.hxx
        h_C.hxx
        h_null.hxx
        h_unsat.hxx
        h_unsat_mutex.hxx
        heuristic.hxx
        landmark_count.hxx
        landmark_graph.cxx
        landmark_graph.hxx
        landmark_graph_generator.hxx
        landmark_graph_manager.hxx
        layered_h_max.hxx
        rp_heuristic.hxx
)

install(
    FILES 
        bs_graph.hxx
        ff_rp_heuristic.hxx
        h_1.hxx
        h_2.hxx
        h_C.hxx
        h_null.hxx
        h_unsat.hxx
        h_unsat_mutex.hxx
        heuristic.hxx
        landmark_count.hxx
        landmark_graph.hxx
        landmark_graph_generator.hxx
        landmark_graph_manager.hxx
        layered_h_max.hxx
        rp_heuristic.hxx
    DESTINATION
        ${CMAKE_INSTALL_PREFIX}/${REL_CORE_INC_DIR}/lapkt/engine/node_eval/heuristic
    COMPONENT
        lapkt 
)
